--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,53 @@
+aiobotocore==2.1.2
+aiohttp==3.8.1
+aiohttp-retry==2.4.6
+aioitertools==0.10.0
+aiosignal==1.2.0
+appdirs==1.4.4
 arrow==1.2.1
 asttokens==2.0.5
+async-timeout==4.0.2
+asyncssh==2.8.1
+atpublic==3.0.1
+attrs==21.4.0
 backcall==0.2.0
 binaryornot==0.4.4
 black==21.12b0
+boto3==1.20.24
+botocore==1.23.24
 certifi==2021.10.8
+cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.10
 click==8.0.3
+colorama==0.4.4
+commonmark==0.9.1
+configobj==5.0.6
 cookiecutter==1.7.3
+cryptography==36.0.1
 cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.1
+dictdiffer==0.9.0
+diskcache==5.4.0
+distro==1.7.0
+dpath==2.0.6
+dulwich==0.20.33
+dvc==2.9.5
 entrypoints==0.3
 executing==0.8.2
 Flask==2.0.3
+flatten-dict==0.4.2
+flufl.lock==7.0
 fonttools==4.29.0
+frozenlist==1.3.0
+fsspec==2022.2.0
+ftfy==6.1.1
+funcy==1.17
+future==0.18.2
+gitdb==4.0.9
+GitPython==3.1.27
+grandalf==0.6
 idna==3.3
 ipykernel==6.7.0
 ipython==8.0.0
@@ -22,49 +55,82 @@ itsdangerous==2.1.0
 jedi==0.18.1
 Jinja2==3.0.3
 jinja2-time==0.2.0
+jmespath==0.10.0
 joblib==1.1.0
 jupyter-client==7.1.1
 jupyter-core==4.9.1
 kiwisolver==1.3.2
+mailchecker==4.1.14
 MarkupSafe==2.0.1
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
+multidict==6.0.2
 mypy-extensions==0.4.3
+nanotime==0.5.2
 nest-asyncio==1.5.4
+networkx==2.7.1
 numpy==1.22.1
 packaging==21.3
 pandas==1.3.5
 parso==0.8.3
 pathspec==0.9.0
 pexpect==4.8.0
+phonenumbers==8.12.45
 pickleshare==0.7.5
 Pillow==9.0.0
 platformdirs==2.4.1
+ply==3.11
 poyo==0.5.0
 prompt-toolkit==3.0.24
+psutil==5.9.0
 psycopg2-binary==2.9.3
 ptyprocess==0.7.0
 pure-eval==0.2.1
+pyasn1==0.4.8
+pycparser==2.21
+pydot==1.4.2
+pygit2==1.9.0
 Pygments==2.11.2
+pygtrie==2.4.2
 pyparsing==3.0.7
+python-benedict==0.25.0
 python-dateutil==2.8.2
-python-slugify==5.0.2
+python-fsutil==0.6.0
+python-slugify==6.1.1
 pytz==2021.3
+PyYAML==6.0
 pyzmq==22.3.0
 requests==2.27.1
+rich==12.0.0
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
+s3fs==2022.2.0
+s3transfer==0.5.2
 scikit-learn==1.0.2
 scikit-plot==0.3.7
 scipy==1.7.3
+scmrepo==0.0.7
 seaborn==0.11.2
+shortuuid==1.0.8
+shtab==1.5.3
 six==1.16.0
 sklearn==0.0
+smmap==5.0.0
 stack-data==0.1.4
+tabulate==0.8.9
 text-unidecode==1.3
 threadpoolctl==3.1.0
+toml==0.10.2
 tomli==1.2.3
 tornado==6.1
+tqdm==4.63.0
 traitlets==5.1.1
 typing_extensions==4.0.1
 urllib3==1.26.8
+voluptuous==0.12.2
 wcwidth==0.2.5
 Werkzeug==2.0.3
+wrapt==1.14.0
+xmltodict==0.12.0
+yarl==1.7.2
+zc.lockfile==2.0
