--- a/requirements.txt
+++ b/requirements.txt
@@ -95,6 +95,7 @@ pygtrie==2.4.2
 pyparsing==3.0.7
 python-benedict==0.25.0
 python-dateutil==2.8.2
+python-decouple==3.6
 python-fsutil==0.6.0
 python-slugify==6.1.1
 pytz==2021.3
